[package]
name = "po"
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mglolenstine/po"
version = "0.1.0"
edition = "2018"
description = "Read/Write support for PO translation files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.10"
